--- a/assets/App-1.1.0.css
+++ b/assets/App-1.1.0.css
@@ -1426,20 +1426,6 @@ caption {
   min-width: 300px;
   min-height: 300px;
 }
-.dragdrop {
-  text-align: center;
-  margin-top: 10px;
-  padding-top: 30px;
-  width: 300px;
-  height: 100px;
-  border: 4px dotted #ddd;
-}
-.dragdrop-err {
-  border-color: red;
-}
-.dragdrop-ok {
-  border-color: green;
-}
 .upload-file {
   width: 100%;
 }
@@ -1470,6 +1456,9 @@ caption {
 }
 .dropzone-on {
   border-color: #5cb85c;
+}
+.done {
+  color: #5cb85c;
 }
 .actions {
   text-align: right;
