--- a/assets/App-1.1.0.css
+++ b/assets/App-1.1.0.css
@@ -1398,6 +1398,9 @@ caption {
   text-align: left;
   background: #fff;
   border-top: 1px dotted #ddd;
+  -webkit-transition: all 2s 1.5s ease-out;
+  -moz-transition: all 1.5s ease-out;
+  transition: all 1.5s ease-out;
 }
 .index thead > tr {
   border-top: 1px solid #ddd;
@@ -1430,6 +1433,7 @@ caption {
   width: 100%;
 }
 .upload-files td {
+  min-width: 45px;
   padding-right: 5px;
 }
 .modal-dialog {
@@ -1495,9 +1499,15 @@ caption {
   color: white;
 }
 /*  ng-repeat Animation  */
-.repeat-animation.ng-enter,
-.repeat-animation.ng-leave,
-.repeat-animation.ng-move {
+.repeat-animation.ng-enter {
+  -webkit-transition: all linear 1s;
+  -moz-transition: all linear 1s;
+  -o-transition: all linear 1s;
+  transition: all linear 1s;
+  position: relative;
+  left: 5px;
+}
+.repeat-animation.ng-leave {
   -webkit-transition: all linear 1s;
   -moz-transition: all linear 1s;
   -o-transition: all linear 1s;
@@ -1519,32 +1529,29 @@ caption {
   display: none;
   opacity: 0;
 }
-.repeat-animation.ng-move {
-  left: 2px;
-  opacity: 0.5;
+.repeat-enter-setup,
+.repeat-leave-setup {
+  -webkit-transition: all linear 0.5s;
+  -moz-transition: all linear 0.5s;
+  -ms-transition: all linear 0.5s;
+  -o-transition: all linear 0.5s;
+  transition: all linear 0.5s;
 }
-.repeat-animation.ng-move.ng-move-active {
-  left: 0;
-  opacity: 1;
-}
-/*  ng-hide Animation  */
-.hide-fade.ng-hide-add,
-.hide-fade.ng-hide-remove {
-  -webkit-transition: all linear 1s;
-  -moz-transition: all linear 1s;
-  -o-transition: all linear 1s;
-  transition: all linear 1s;
-  display: block!important;
-}
-.hide-fade.ng-hide-add.ng-hide-add-active,
-.hide-fade.ng-hide-remove {
-  display: none;
+.repeat-enter-setup {
+  line-height: 0;
   opacity: 0;
 }
-.hide-fade.ng-hide-add,
-.hide-fade.ng-hide-remove.ng-hide-remove-active {
-  display: none;
+.repeat-enter-setup.repeat-enter-start {
+  line-height: 20px;
   opacity: 1;
+}
+.repeat-leave-setup {
+  opacity: 1;
+  line-height: 20px;
+}
+.repeat-leave-setup.repeat-leave-start {
+  opacity: 0;
+  line-height: 0;
 }
 #crumbs {
   position: relative;
@@ -7690,6 +7697,7 @@ h1 {
   font-size: 1.1em !important;
   word-break: break-word;
   word-wrap: break-word;
+  padding-bottom: 0px!important;
 }
 .half-width {
   width: 50%;
